# SumColouring

./: .gitignore  .gitmodules  CMakeLists.txt  test.bat
Utils/: gather.py  generate.py
data/: BK100_150.txt  BK100_300.txt  BK100_400.txt  BK10_10.txt  BK10_25.txt  BK10_30.txt  BK15_20.txt  BK200_200.txt  BK200_300.txt  BK20_20.txt  BK22_22.txt  BK250_250.txt  BK250_500.txt  BK250_750.txt  BK25_26.txt  BK25_75.txt  BK2_4.txt  BK375_375.txt  BK3_3.txt  BK4_6.txt  BK4_8.txt  BK500_500.txt  BK5_10.txt  BK5_15.txt  BK5_5.txt  BK6_6.txt  BK7_8.txt  C15.txt  C20.txt  C33.txt  C45.txt  K10.txt  K15.txt  K20.txt  K250.txt  K33.txt  K4.txt  K45.txt  K500.txt  K6.txt  (+84 more)
src/: BruteForceSolver.cpp  BruteForceSolver.h  GISSolver.cpp  GISSolver.h  Graph.h  LinearProgrammingSolver.cpp  LinearProgrammingSolver.h  MaxSATSolver.cpp  MaxSATSolver.h  Solver.cpp  Solver.h  io.cpp  io.h  main.cpp
